--- a/src/Components/SideBar/sideBar.css
+++ b/src/Components/SideBar/sideBar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #f0f0f0bd;
+  color: #f0f0f079;
   background-color: #010b13;
   gap: 15%;
   font-size: 15px;
@@ -12,19 +12,30 @@
 }
 .side_bar__title {
   font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
   color: #ffffff;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 .side_bar__data {
   display: flex;
   flex-direction: column;
+  gap: 10px;
 }
 
 .side_bar__item {
   margin: 10px 0px;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .active_side_bar__item {
   margin: 10px 0px;
   color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
